--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,40 +2,33 @@
 name = "rusty_http_client"
 version = "0.1.0"
 edition = "2021"
-authors = ["Ugo Chinemerem <Ugofranklin22@gmail.com>"]
+authors = ["Your Name <your.email@example.com>"]
 description = "A lightweight Rust SDK that wraps around reqwest to simplify making HTTP requests"
 license = "MIT"
-repository = "https://github.com/meremart/aqua_http_client"
+repository = "https://github.com/yourusername/rusty_http_client"
 keywords = ["http", "client", "reqwest", "wrapper", "api"]
 categories = ["api-bindings", "web-programming::http-client"]
 readme = "README.md"
 
 [dependencies]
-
-reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "multipart"], optional = false }
- #HTTP client library
-serde = { version = "1.0", features = ["derive"] } #Serialization/deserialization framework
-serde_json = "1.0" #JSON serialization/deserialization
-thiserror = "1.0" #Provides a simple way to define custom error types
-tokio = { version = "1.0", features = ["full"] } #Asynchronous runtime for Rust
-url = "2.3" #Provides safe, parseable, mutable URLs
-urlencoding = "2.1" #URL encoding/decoding library
-async-trait = "0.1" #Allows async functions in traits
-log = "0.4"# Logging framework for Rust
-futures = "0.3" #Provides utilities for asynchronous programming
-
+reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "multipart"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+url = "2.3"
+urlencoding = "2.1"
+async-trait = "0.1"
+log = "0.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
-mockito = "1.0"
-async-std = { version = "1.12", features = ["attributes"] }
 env_logger = "0.10"
-
 
 [features]
 default = ["async"]
 async = []
-blocking = ["reqwest/blocking", "reqwest/multipart"]
+blocking = []
 middleware = []
 full = ["async", "blocking", "middleware"]
 
@@ -54,8 +47,4 @@ required-features = ["blocking"]
 
 [[example]]
 name = "advanced_usage"
-path = "/examples/advanced_usage.rs"
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
+path = "examples/advanced_usage.rs"
